OAEWDGT-48 Fix style issues on recently added and top rated on the homepage for long widget names
Squashed commit of the following:

commit 10eedd5286c7fbda9c6b3d3278cf568c911fece9
Author: Bert Pareyn <bp323@caret.cam.ac.uk>
Date:   Wed Dec 21 09:23:13 2011 +0000

    OAEWDGT-48 Make most popular widgets title shorter

commit 00220c634229a623cb5f6d58b4160322c1ef7dc6
Author: Bert Pareyn <bp323@caret.cam.ac.uk>
Date:   Tue Dec 20 09:55:18 2011 +0000

    OAEWDGT-48 use .eql instead of ===

commit 414a9cd4bef1d50729576b79bf0f6710d9d4f70c
Author: Bert Pareyn <bp323@caret.cam.ac.uk>
Date:   Mon Dec 19 18:19:25 2011 +0000

    OAEWDGT-48 Change variable name used to determine how long text can be

commit d220048b303b3e1b073be29b437de98c86d2cc50
Merge: aee58f1 48f154c
Author: Bert Pareyn <bp323@caret.cam.ac.uk>
Date:   Mon Dec 19 18:09:55 2011 +0000

    Merge remote-tracking branch 'origin/master' into OAEWDGT-48

commit aee58f10b252e587bc26c9e2582d78680d911f05
Author: Bert Pareyn <bp323@caret.cam.ac.uk>
Date:   Mon Dec 19 14:51:25 2011 +0000

    OAEWDGT-48 Fix style issues on recently added and top rated on the homepage for long widget names

--- a/app/assets/stylesheets/index.css.scss
+++ b/app/assets/stylesheets/index.css.scss
@@ -104,6 +104,7 @@
     /****************/
     #widgetlibrary_mostpopular .wl-widget-item a.wl-widget-item_widgetname {
       font-size: 12px;
+      overflow:hidden;
     }
 
     #widgetlibrary_mostpopular .wl-widget-item .wl-rating-container {
@@ -142,6 +143,7 @@
       padding: 8px;
       .wl-rating-container {
           clear: none;
+          padding-top:7px;
       }
     }
 
